--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			<p>I would love to talk to you, ping me on twitter and I will gladly answer(even more if the topic is about Programming, Football or <a href="http://www.youtube.com/watch?v=ydRAb9cwHnA">GOT</a>).</p>
 			<footer>
 				<a href="http://twitter.com/rockingeric">Twitter</a> |
-				<a href="http://github.com/rockingeric">Github</a>
+				<a href="http://github.com/rockingeric">Github</a> |
+				<a href="http://rockingeric.svbtle.com/">Blog</a> |
 			</footer>
 		</div>
 	</body>
