--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<footer>
 				<a href="http://twitter.com/rockingeric">Twitter</a> |
 				<a href="http://github.com/rockingeric">Github</a> |
-				<a href="http://rockingeric.svbtle.com/">Blog</a> |
+				<a href="http://rockingeric.svbtle.com/">Blog</a>
 			</footer>
 		</div>
 	</body>
