--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="wrapper">
 			<h2>Welcome!</h2>
-			<p>This is the the place I'll join all my stuff together. Texts, code, news, images etc.</p>
+			<p>Hi, I am Eric, and this is the the place I'll join all my stuff together. Texts, code, news, images etc.</p>
 
 			<h3>About me</h3>
 			<p>I am brazillian developer, passionate about the possibilities of being a programmer.</p>
