--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<p>Hi, I am Eric, and this is the the place I'll join all my stuff together. Texts, code, news, images etc.</p>
 
 			<h3>About me</h3>
-			<p>I am brazillian developer, passionate about the possibilities of being a programmer.</p>
+			<p>I am brazillian developer, passionate about the possibilities that being a programmer provides me.</p>
 			<p>I like football(aka soccer), books, movies and the learning of new languages.</p>
 
 			<h3>Contact</h3>
