--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 		
 		  ga('create', 'UA-51445614-2', 'rockingeric.github.io');
+		  ga('require', 'displayfeatures');
 		  ga('send', 'pageview');
 		
 		</script>
