--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                         <p>This is my web site, and this is how I like to handle my stuff, as simple as can be.</p>
                         <h3>About me</h3>
                         <p>I am programmer. A passionate and curious one. Ruby, JavaScript, Java and PHP mostly.</p>
-			<p>I like football(aka soccer), books, movies and the learning of new languages.</p>
+			<p>I like sports(A LOT), books, movies and the learning of new languages.</p>
 
 			<h3>Contact</h3>
 			<p>I would love to talk to you, ping me on twitter and I will gladly answer(even more if the topic is about Programming, Sports or <a href="http://www.youtube.com/watch?v=ydRAb9cwHnA">GOT</a>).</p>
