--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 			<h2>Welcome!</h2>
                         <p>This is my web site, and this is how I like to handle my stuff, as simple as can be.</p>
                         <h3>About me</h3>
-                        <p>I am programmer. A passionate and curious one. Ruby, JavaScript, Java and PHP mostly.</p>
-			<p>I like sports(A LOT), books, movies and the learning of new languages.</p>
+                        <p>I am programmer. A passionate and curious one. Ruby, JavaScript, Java, PHP and mostly recently, LOTS of PL/SQL.</p>
+			<p>I like sports(A LOT), I am a Corinthians fan as well as a fan of all of the DFW sports teams (that includes the Cowboys, Rangers, Mavericks and so on...), 
+			books, movies and the learning of new languages.</p>
 
 			<h3>Contact</h3>
 			<p>I would love to talk to you, ping me on twitter and I will gladly answer(even more if the topic is about Programming, Sports or <a href="http://www.youtube.com/watch?v=ydRAb9cwHnA">GOT</a>).</p>
