Fixing some syntax

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h2>Welcome!</h2>
                         <p>This is my web site, and this is how I like to handle my stuff, as simple as can be.</p>
                         <h3>About me</h3>
-                        <p>I am programmer. A passionate and curious one. Ruby, JavaScript, Java, PHP and mostly recently, LOTS of PL/SQL.</p>
+                        <p>I am programmer. A passionate and curious one. Ruby, JavaScript, Java, PHP - and mostly recently - PL/SQL are the tools I like to play with.</p>
 			<p>I like sports(A LOT), I am a Corinthians fan as well as a fan of all of the DFW sports teams (that includes the Cowboys, Rangers, Mavericks and so on...).
 				Books, movies and the learning of new languages are always on my agenda, too.</p>
 
